--- a/style.css
+++ b/style.css
@@ -2,15 +2,34 @@ body {
     background-color: #868B9D;
     margin: 0px;
     font-family: roboto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 a {
     color: #437E9A;
+    padding: 0px 30px;
 }
 p {
     margin-bottom: 0px;
+    padding: 0px 30px;
 }
 h3 {
     margin-top: 0px;
+    padding: 30px 30px 0px 30px;
+}
+table, ul, h1, h4 {
+    padding: 0px 30px;
+}
+td {
+    min-width: 100px;
+    vertical-align: top;
+    padding: 5px;
+}
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 header {
     position: fixed;
@@ -23,13 +42,14 @@ header {
     color: #A6ABBD;
 }
 .title {
-    padding-left: 30px;
+    padding: 30px;
 }
 .profielfoto {
     width: 300px;
 }
 .about {
     width: 75%;
+    padding: 0em 0em 2em 0em;
     background-color: #437E9A;
     color: #262B3A;
     margin-top: 300px;
@@ -42,14 +62,20 @@ header {
 }
 .left {
     background-color: #626778;
-    color: #BCC1D3
+    color: #BCC1D3;
+    padding-bottom: 2em;
 }
 .right {
     background-color: #A6ABBD;
-    color: #414656; 
+    color: #414656;
+    padding-bottom: 2em; 
 }
 .other {
     width: 75%;
     background-color: #414656;
     color: #A6ABBD;
+    padding: 2em 0em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
