--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     align-items: center;
 }
 a {
-    color: #437E9A;
+    color: #83b3c9;
 }
 p {
     margin-bottom: 0px;
@@ -52,6 +52,9 @@ header {
     background-color: #437E9A;
     color: #262B3A;
     margin-top: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     
 }
 .experience {
@@ -77,4 +80,7 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+#text {
+    width: 75%;
 }
